[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/ui/Multiplayer.gd" type="Script" id=1]

[node name="Lobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 2
size_flags_vertical = 2
script = ExtResource( 1 )

[node name="Players" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -217.0
margin_top = -177.0
margin_right = 255.0
margin_bottom = 178.0
size_flags_horizontal = 2
size_flags_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Players"]
margin_left = 26.0
margin_top = 18.0
margin_right = 142.0
margin_bottom = 32.0
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Awaiting Players..."

[node name="Start" type="Button" parent="Players"]
visible = false
margin_left = 269.0
margin_top = 313.0
margin_right = 354.0
margin_bottom = 342.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ready" type="Button" parent="Players"]
margin_left = 269.0
margin_top = 313.0
margin_right = 354.0
margin_bottom = 342.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Ready"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="Button" parent="Players"]
margin_left = 164.0
margin_top = 313.0
margin_right = 261.0
margin_bottom = 342.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AddBot" type="Button" parent="Players"]
visible = false
margin_left = 17.0
margin_top = 312.0
margin_right = 110.0
margin_bottom = 341.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Add Bot"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Control" parent="Players"]
margin_left = 25.0
margin_top = 42.0
margin_right = 345.0
margin_bottom = 56.0

[node name="Name" type="Label" parent="Players/Title"]
margin_left = 8.0
margin_right = 46.0
margin_bottom = 14.0
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Difficulty" type="Label" parent="Players/Title"]
margin_left = 56.0
margin_right = 113.0
margin_bottom = 14.0
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Difficulty"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tank" type="Label" parent="Players/Title"]
margin_left = 122.0
margin_right = 151.0
margin_bottom = 14.0
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Tank"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Team" type="Label" parent="Players/Title"]
margin_left = 159.0
margin_right = 194.0
margin_bottom = 14.0
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Team"

[node name="ScrollContainer" type="ScrollContainer" parent="Players"]
margin_left = 25.0
margin_top = 70.0
margin_right = 441.0
margin_bottom = 288.0
size_flags_horizontal = 2
size_flags_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="List" type="VBoxContainer" parent="Players/ScrollContainer"]
margin_right = 416.0
margin_bottom = 218.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Connect" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -138.0
margin_top = -51.0
margin_right = 215.0
margin_bottom = 29.0
size_flags_horizontal = 2
size_flags_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameLabel" type="Label" parent="Connect"]
margin_left = 14.0
margin_top = 11.0
margin_right = 56.0
margin_bottom = 25.0
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Name:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="LineEdit" parent="Connect"]
margin_left = 17.0
margin_top = 30.0
margin_right = 173.0
margin_bottom = 54.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "The Warrior"

[node name="Host" type="Button" parent="Connect"]
margin_left = 181.0
margin_top = 31.0
margin_right = 246.0
margin_bottom = 51.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Host"

[node name="Join" type="Button" parent="Connect"]
margin_left = 258.0
margin_top = 32.0
margin_right = 323.0
margin_bottom = 52.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Join"

[node name="ErrorLabel" type="Label" parent="Connect"]
margin_left = 19.0
margin_top = 125.0
margin_right = 261.0
margin_bottom = 139.0
size_flags_horizontal = 2
size_flags_vertical = 0
custom_colors/font_color = Color( 0.820312, 0.291595, 0.291595, 1 )
align = 1

[node name="ErrorDialog" type="AcceptDialog" parent="."]
margin_right = 55.0
margin_bottom = 58.0
size_flags_horizontal = 2
size_flags_vertical = 2

[connection signal="pressed" from="Players/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Players/Ready" to="." method="_on_Ready_pressed"]
[connection signal="pressed" from="Players/AddBot" to="." method="_on_AddBot_pressed"]
[connection signal="pressed" from="Connect/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="Connect/Join" to="." method="_on_join_pressed"]
